x2goclient (4.0.3.2-0x2go1) UNRELEASED; urgency=medium

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.3.2):
    - Reformat onmainwindow.cpp
    - Fix placement of session folders in session card column. (Fixes: #681).
    - Send empty message in x2gohelper to stop AppStarting cursor. (Fixes: #616).

  [ Mike Gabriel ]
  * New upstream release (4.0.3.2):
    - Provide empty Turkish translation file.
    - Add several info/error/debug log message while hunting down #702.
    - Use app.setQuitOnLastWindowClosed(false) for the X2Go Client QtApplication
      to assure that X2Go Client does not arbitrarily exit during a running
      session. This fixes X2Go Client crashes that occur when printing via
      the CUPS-X2Go printing mechanism with activate print dialog popup on
      incoming print jobs and minimized main window. (Fixes: #702).
    - Be more exact when reporting rev forwarding tunnel request failures to
      the GUI user. Include the purpose of the tunnel (NX, audio, foldersharing)
      in the error message.
    - Enable debugging in sshprocess.cpp and sshmasterconnection.cpp if
      --debug is given.
    - sshmasterconnection.cpp: Fix several grammar issues in error messages.
    - When sharing a client-side folder, do not write the SSH pub key to
      client-side authorized_keys file if the folder-to-be-shared does not
      exist on the client. (Partially solves #405).
    - Fix string concatenation/layout of error message when tunnel I/O errors
      occur.
    - Improve debugging/logging the SSH connections made by X2Go Client.
    - Fix quotes when calling remote commands via SSH (esp. allow same quoting/
      escaping style for libssh and openSSH+Krb based connections). (Fixes: #720).
    - FIXME: Disable PubkeyAuthentication _and_ PasswordAuthentication if
      GSSAPI authentication is activated. This is counter intuitive, though,
      and requires several other fixes in the authentication code.
  * x2goclient.spec: